# bevy_spawn_fn

./: Cargo.toml  README.md
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: some_sprites.rs
src/: lib.rs  spawnable.rs
