[workspace]
members = [ "derive" ]

[package]
name = "bevy_spawn_fn"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset = "0.13.2"
bevy_ecs = "0.13.2"
bevy_hierarchy = "0.13.2"
default-constructor = "0.2.1"
scoped-tls-hkt = "0.1.4"
bevy_spawn_fn_derive = { version = "0.1", path = "./derive" }
