[workspace]
members = [ "derive" ]

[package]
name = "bevy_spawn_fn"
version = "0.2.0-rc.4"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_spawn_fn"
description = """
Awesome spawning experience for bevy.
"""
keywords = ["bevy", "spawn", "spawning"]

[lib]
doctest = false

[dependencies]
bevy_asset = "0.14.0-rc.4"
bevy_ecs = "0.14.0-rc.4"
bevy_hierarchy = "0.14.0-rc.4"
default-constructor = "0.3.0"
scoped-tls-hkt = "0.1.4"
bevy_spawn_fn_derive = { version = "0.1", path = "./derive" }

[dev-dependencies]
bevy = "0.14.0-rc.4"
