[package]
name = "bevy_spawn_fn_derive"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_spawn_fn"
description = """
Derive macros for bevy_spawn_fn.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
